# cis194-exercises

./: .ghci  .gitignore  LICENSE  README.md  default.nix  nixpkgs.nix  package.nix  shell.nix  stack-commands.md  stacktrace-cis194.cabal
dev/: up  watch
nix/: tools.nix
nix/scripts/: register-deps
src/Week01/: CreditCardValidator.hs  TowersOfHanoi.hs
src/Week02/: Log.hs  LogAnalysis.hs  TalkyBit.hs  notes.md
src/Week03/: Golf.hs  TalkyBit.hs  notes.md
src/Week04/: Soln.hs  TalkyBit.hs  notes.md
src/Week05/: Calc.hs  ExprT.hs  Parser.hs  StackVM.hs  TalkyBit.hs  notes.md
src/Week06/: Fibonacci.hs
src/Week07/: Buffer.hs  Editor.hs  JoinList.hs  Scrabble.hs  Sized.hs  StringBufEditor.hs
src/Week08/: Employee.hs  Party.hs
src/Week10/: AParser.hs
src/Week11/: AParser.hs  SExpr.hs
src/Week12/: Risk.hs
test/: Spec.hs
test/Week01/: CreditCardValidatorSpec.hs  TowersOfHanoiSpec.hs
test/Week02/: LogAnalysisSpec.hs
test/Week03/: GolfSpec.hs
test/Week04/: SolnSpec.hs
test/Week05/: CalcSpec.hs
test/Week06/: FibonacciSpec.hs
test/Week07/: JoinListSpec.hs
test/Week08/: PartySpec.hs
test/Week10/: AParserSpec.hs
test/Week11/: SExprSpec.hs
test/Week12/: RiskSpec.hs
