name:                stacktrace-cis194
version:             0.1.0.0
synopsis:            Resources for working through CIS194 together
homepage:            https://github.com/stacktracehq/cosmos/tree/master/training/CIS194
license:             BSD3
license-file:        LICENSE
author:              Stacktrace
maintainer:          hello@stacktracehq.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Week01.CreditCardValidator
    Week01.TowersOfHanoi
  build-depends:
    base >=4.10 && <4.11
  hs-source-dirs:
    src
  default-language:
    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is:
    Spec.hs
  other-modules:
    Week01.CreditCardValidatorSpec
  hs-source-dirs:
    test
  default-extensions:
    OverloadedStrings
  ghc-options:
    -Wall
  build-depends:
    base >=4.10 && <4.11,
    hspec,
    stacktrace-cis194
  default-language:
    Haskell2010
