name:                stacktrace-cis194
version:             0.1.0.0
synopsis:            Resources for working through CIS194 together
homepage:            https://github.com/stacktracehq/cosmos/tree/master/training/CIS194
license:             BSD3
license-file:        LICENSE
author:              Stacktrace
maintainer:          hello@stacktracehq.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Week01.CreditCardValidator
    Week01.TowersOfHanoi
    Week02.Log
    Week02.LogAnalysis
    Week03.Golf
    Week04.Soln
    Week05.Calc
    Week05.ExprT
    Week05.Parser
    Week05.StackVM
    Week06.Fibonacci
    Week07.Buffer
    Week07.Editor
    Week07.Sized
    Week07.JoinList
    Week07.Scrabble
    Week08.Party
    Week08.Employee
  ghc-options:
    -Wall
  build-depends:
    base >=4.10 && <5,
    containers,
    mtl
  hs-source-dirs:
    src
  default-language:
    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is:
    Spec.hs
  other-modules:
    Week01.CreditCardValidatorSpec
    Week02.LogAnalysisSpec
    Week03.GolfSpec
    Week04.SolnSpec
    Week05.CalcSpec
    Week06.FibonacciSpec
    Week07.JoinListSpec
    Week08.PartySpec
  hs-source-dirs:
    test
  default-extensions:
    OverloadedStrings
  ghc-options:
    -Wall
    -fno-warn-type-defaults
  build-depends:
    base >=4.10 && <5,
    containers,
    hspec,
    stacktrace-cis194
  default-language:
    Haskell2010
